--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,1 @@
-theme: jekyll-theme-midnight
-title: Lohita's homepage
-description: Bookmark this to keep an eye on my project updates!
+theme: jekyll-theme-slate
